test/fixtures/compile/import/import.throw.extern.ne.ne.error
ReferenceException: "SyntaxError" is not defined (line 1, file "fixtures/compile/import/import.throw.extern.ne.ne.ks")