test/fixtures/compile/import/import.sealed.namespace.impl.default.ks
import '../export/export.sealed.namespace.impl.default.ks'

console.log(`\(Math.PI)`)
console.log(`\(Math.pi)`)
console.log(`\(Math.foo())`)

console.log(`\(Math.PI.toString())`)
console.log(`\(Math.pi.toString())`)
console.log(`\(Math.foo().toString())`)